--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,6 +13,10 @@ h2 {
     color: indianred;
 }
 
+p {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .container {
     display: flex;
     justify-items: center;
