correct link for cv css

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -37,6 +37,7 @@ p {
     font-weight: bold;
     flex-basis: auto;
     background-color: lightcoral;
+    text-align: center;
 }
 
 .button:hover {
