--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,7 @@
 * {font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
 
-.header {
+.main-title {
+    padding-top: 50px;
     font-size: 50px;
     font-weight: bold;
     color: khaki;
@@ -11,9 +12,10 @@ h2 {
     font-weight: bold;
     font-size: 32px;
     color: indianred;
+    text-align: center;
 }
 
-h2 {
+h3 {
     font-weight: bold;
     font-size: 16px;
     color: wheat;
@@ -24,17 +26,70 @@ p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.centered {
+header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: auto;
+    background-color: burlywood;
+
+}
+
+
+header ul{ 
+    list-style-type: none;
+    display: inline-flex;
+    flex-flow: wrap;
+  }
+  
+  
+header li a {
+    display: inline-flex;
+    flex-flow: wrap;
+    color: white;
     text-align: center;
+    padding: 16px;
+    text-decoration: none;
+  }
+  
+header li a:hover {
+    color: blanchedalmond;
+    transition: 250ms ease;
+  }
+
+.title {
+    padding : 10px;
+    background-color: antiquewhite;
+    flex: 0 0 100%;
+}
+
+.centered {
+
+    text-align: center;
+    width: 100%;
 }
 .container {
     display: flex;
     justify-items: center;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    flex-flow: wrap;
 }
 
 .child:hover {
-    background-color: azure;
+    background-color: linen;
+    transition: 350ms ease ;
 }
+
+.square {
+    margin: 2px;
+    box-shadow: lavender;
+    width: 300px;
+    height: 300px;
+    padding: 5px;
+}
+
 
 .button {
     font-weight: bold;
@@ -42,9 +97,11 @@ p {
     flex-basis: auto;
     background-color: lightcoral;
     display : block;
+    
 }
 
 .button:hover {
-    color: indigo;
-    transition: cubic-bezier();
+    background-color: indigo;
+    transition: 300ms ease;
+    border-radius: 3%;
 }
