--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Gaegu:wght@300;400;700&family=Roboto+Condensed&family=Roboto+Slab:wght@300;400;500;600;700&display=swap');
+
 * {font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
 
 .main-title {
@@ -6,7 +8,9 @@
     font-weight: bold;
     color: khaki;
     text-align: center;
+    
 }
+
 
 h2 {
     font-weight: bold;
@@ -18,12 +22,14 @@ h2 {
 h3 {
     font-weight: bold;
     font-size: 16px;
-    color: wheat;
+    color: burlywood;
+    font-family: 'Roboto Slab', serif;
 }
 
 
 p {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 18px;
 }
 
 header {
