fixed flex direction CV

--- a/resources/css/cv_style.css
+++ b/resources/css/cv_style.css
@@ -43,6 +43,10 @@ child {
     padding : 5%;
 }
 
+.container .child {
+    flex-direction: column;
+}
+
 .child:hover {
     background-color: lavender;
 }
